--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -24,7 +24,7 @@ div.picture
             +bg-image(32px, 32px, './../assets/Arrows-light.svg')
             transform: translateX(0)
             z-index: 1
-            +xlMaxBreakPoint
+            +lgMaxBreakPoint
                 display: none
             &:hover
                 background-image: url('./../assets/Arrows-dark.svg')
