--- a/landing-page/src/components/topMenu/underBar/_underBar.sass
+++ b/landing-page/src/components/topMenu/underBar/_underBar.sass
@@ -15,5 +15,7 @@ div.underBar
         +bg-image(19px, 19px, './../assets/status_icon.svg')
     p
         font-size: 14px
+        +smMaxBreakPoint
+            font-size: 12px
     &.active
         top: 60px
