--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -32,6 +32,10 @@ div.topMenu
                 background-image: url('./../assets/logo.svg')
                 background-repeat: no-repeat
                 background-size: contain
+                +smMaxBreakPoint
+                    margin: 0 10px 0 14px
+                    width: 25px
+                    height: 25px
             p.spaceSystem
                 margin: 0
                 font-size: 24px
@@ -39,6 +43,8 @@ div.topMenu
                 line-height: 60px
                 +lgMaxBreakPoint
                     font-size: 20px
+                    +smMaxBreakPoint
+                        font-size: 16px
         button.joinBtn
             position: absolute
             top: 0
@@ -46,5 +52,8 @@ div.topMenu
             +lgMaxBreakPoint
                 width: 135px
                 margin-right: 10px
+                +smMaxBreakPoint
+                    width: 100px
+                    font-size: 14px
     &.disabled
         top: -60px
