Favicon, font and color variable change.

--- a/landing-page/src/styles/_variables.sass
+++ b/landing-page/src/styles/_variables.sass
@@ -9,6 +9,7 @@ $light-white: #FEFEFE
 $red: #F26313
 $brown: #883900
 $yellow: #FFD232
+$light-yellow: #FFF6C4
 $green: #06C28F
 $light-green: #E7F9F4
 $blue: #847FFB
