--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -1,4 +1,15 @@
-@import url('https://fonts.cdnfonts.com/css/avenir')
+@font-face
+    font-family: "Avenir"
+    src: url("../fonts/avenir/font.woff") format('woff'), url("../fonts/avenir/font.woff2")
+    font-weight: 300
+@font-face
+    font-family: "Avenir"
+    src: url("../fonts/avenir/font-1.woff") format('woff'), url("../fonts/avenir/font-1.woff2")
+    font-weight: 500
+@font-face
+    font-family: "Avenir"
+    src: url("../fonts/avenir/font-2.woff") format('woff'), url("../fonts/avenir/font-2.woff2")
+    font-weight: 900
 @import 'mixins'
 @import 'variables'
 @import 'functions'
@@ -10,8 +21,15 @@ body
     box-sizing: border-box
     text-align: center
     font-family: 'Avenir', sans-serif
+    font-weight: 500
+    line-box-contain: glyph
     p, h1
         margin: 0
     button
         font-family: 'Avenir', sans-serif
         cursor: pointer
+    input
+        padding: 0 20px
+        &::placeholder
+            font-family: 'Avenir', sans-serif
+            font-weight: 300
