--- a/landing-page/src/components/joinBtn/_joinBtn.sass
+++ b/landing-page/src/components/joinBtn/_joinBtn.sass
@@ -9,3 +9,6 @@ button.joinBtn
     font-size: 16px
     letter-spacing: -0.011em
     font-weight: 500
+    line-height: 45px
+    &:hover
+        background-color: $light-yellow
