Refactor top menu.

--- a/landing-page/src/components/topMenu/_topMenu.sass
+++ b/landing-page/src/components/topMenu/_topMenu.sass
@@ -41,6 +41,7 @@ div.topMenu
                 font-size: 24px
                 font-weight: 900
                 line-height: 60px
+                letter-spacing: -0.022em
                 +lgMaxBreakPoint
                     font-size: 20px
                     +smMaxBreakPoint
@@ -53,7 +54,6 @@ div.topMenu
                 width: 135px
                 margin-right: 10px
                 +smMaxBreakPoint
-                    width: 100px
                     font-size: 14px
     &.disabled
         top: -60px
