Refactor service bar styling.

--- a/landing-page/src/components/serviceBar/_serviceBar.sass
+++ b/landing-page/src/components/serviceBar/_serviceBar.sass
@@ -1,4 +1,4 @@
-div.serviceBar
+.serviceBar
     +flex(row, space-evenly, center)
     height: 70px
     border-width: 1px 0px
@@ -7,10 +7,18 @@ div.serviceBar
     +lgMaxBreakPoint
         height: 200px
         +flex(column, space-around, flex-start)
-    div.serviceBarItem
+    .serviceBarItem
         +flex
         +lgMaxBreakPoint
-            margin-left: 28px
+            margin: 0 25px
+            border-width: 1px 0px
+            border-style: solid
+            border-color: $dark-white
+            height: 100%
+            align-self: stretch
+            justify-content: flex-start
+            +mdMaxBreakPoint
+                position: relative
         div
             &.customise
                 +bg-image(20px, 22px, './../assets/customise_icon.svg')
@@ -21,6 +29,8 @@ div.serviceBar
             &.info
                 position: relative
                 +bg-image(18px, 18px, './../assets/info_icon.svg')
+                +smMaxBreakPoint
+                    position: static
                 .tooltip
                     +container(325px, 22px 20px, $light-grey, 2px)
                     border: none
@@ -31,7 +41,11 @@ div.serviceBar
                     left: -150px
                     font-size: 15px
                     line-height: 20px
-                    text-align: justify
+                    text-align: left
+                    +smMaxBreakPoint
+                        top: 100%
+                        left: 50%
+                        transform: translateX(-50%)
                     &::after
                         content: " "
                         position: absolute
@@ -41,6 +55,8 @@ div.serviceBar
                         border-width: 22px
                         border-style: solid
                         border-color: transparent transparent $light-grey transparent
+                        +smMaxBreakPoint
+                            border: none
 
                 &:hover
                     +bg-image(18px, 18px, './../assets/info_icon-Type=Hoover.svg')
@@ -49,3 +65,4 @@ div.serviceBar
                         visibility: visible
         p
             margin: 0 12px
+            padding-top: 4px
