--- a/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
+++ b/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
@@ -10,28 +10,30 @@
             &-plus
                 +bg-image(10px,10px, './../assets/plus-light.svg')
                 margin-right: 9px
-                transition: .3s
+                transition: .1s
                 &.active
                     background-image: url('./../assets/plus-dark.svg')
-                    width: 12px
-                    height: 12px
-                    margin-right: 7px
-                    transform: rotate(135deg)
+                    width: 10px
+                    height: 10px
+                    transform: rotate(45deg)
             &-name
                 font-weight: 300
                 transition: .3s
+                padding-top: 4px
                 &.active
                     font-weight: 900
             &:hover
                 .tab-label-plus
                     background-image: url('./../assets/plus-dark.svg')
                 .tab-label-name
-                    font-weight: 900
+                    font-weight: 500
         .tab-content-wrapper
-            font-size: 13px
+            font-size: 15px
             font-weight: 300
-            line-height: 18px
+            line-height: 20px
+            letter-spacing: 0.022em
+            color: $dark-grey
             transition: .3s
             overflow: hidden
             div.tab-content
-                padding: 0 30px 20px 48px
+                padding: 0 20px 10px 48px
