--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -42,9 +42,9 @@
                 width: 10px
                 height: 10px
         .control-next.control-arrow:before
-            border-left: 8px solid $black
+            display: none
         .control-prev.control-arrow:before
-            border-right: 8px solid $black
+            display: none
         .thumbs-wrapper
             margin: 0
             +xlMaxBreakPoint
