--- a/landing-page/src/components/testimonials/_testimonials.sass
+++ b/landing-page/src/components/testimonials/_testimonials.sass
@@ -63,6 +63,8 @@
                         height: 108px
                         line-height: 22px
                         text-align: left
+                        p.name
+                            text-decoration: underline
             .carousel-arrow
                 +center
                 +bg-image(35px, 35px, './../assets/Arrows-white.svg')
