--- a/landing-page/src/components/header/_header.sass
+++ b/landing-page/src/components/header/_header.sass
@@ -1,7 +1,7 @@
 div.header
     position: relative
     top: 0
-    +bg-image(calc(98vh), 100%, './../assets/Beauty-Sideboard-1.png', cover)
+    +bg-image(calc(98vh), 100%, './../assets/Beauty-Sideboard-1.svg', cover)
     div.shadow
         position: absolute
         width: 100%
@@ -18,6 +18,7 @@ div.header
         text-align: left
         color: $light-white
         font-weight: 700
+        line-height: 87.42px
         +xlMaxBreakPoint
             top: 110px
             bottom: auto
