--- a/landing-page/src/components/signUp/_signUp.sass
+++ b/landing-page/src/components/signUp/_signUp.sass
@@ -15,6 +15,7 @@ div.signUp
             font-size: 36px
             padding-bottom: 30px
             font-weight: 900
+            line-height: 49.18px
             &.success
                 text-align: center
         p.description
