--- a/landing-page/src/components/productCategories/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -4,6 +4,7 @@
     width: 100%
     .categories-carousel
         position: relative
+        height: 400px
         width: 100%
         overflow: hidden
         .slides-list
@@ -14,6 +15,26 @@
             gap: 20px
             padding: 0 100px
             transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
+            .category
+                +container(295px, 0, $blue, 5px)
+                &:hover
+                    cursor: pointer
+                .picture-container
+                    height: 280px
+                    overflow: hidden
+                    .picture
+                        +bg-image(280px, 295px, './../assets/category.jpg', cover)
+                .name
+                    height: 118px
+                    font-size: 30px
+                    line-height: 118px
+                    color: $light-white
+                    -webkit-touch-callout: none
+                    -webkit-user-select: none
+                    -khtml-user-select: none
+                    -moz-user-select: none
+                    -ms-user-select: none
+                    user-select: none
         .arrow
             +center
             +bg-image(35px, 35px, './../assets/Arrows-black.svg')
@@ -30,13 +51,15 @@
             &.disabled
                 background-image: url('./../assets/Arrows-light.svg')
                 cursor: auto
-    .slide-container
+    .slider-container
         position: relative
+        +flex
         height: 8px
         width: 400px
         background-color: $light-white
         border-radius: 10px
         overflow: hidden
+        cursor: pointer
         .slider
             position: absolute
             top: 0
@@ -46,3 +69,10 @@
             background-color: $black
             border-radius: 10px
             transition: .3s
+        .slider-button
+            margin: 0
+            padding: 0
+            border: none
+            background-color: transparent
+            height: 100%
+            width: 25%
