--- a/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
@@ -5,30 +5,29 @@
     .carousel-root
         width: 100%
         .slider
-            .category-container
+            .category
+                +container(295px, 0, $blue, 5px)
+                margin: 0 auto
                 +lgMaxBreakPoint
                     margin-bottom: 46px
-                .category
-                    +container(295px, 0, $blue, 5px)
-                    margin: 0 auto
-                    .picture-container
-                        height: 280px
-                        overflow: hidden
+                .picture-container
+                    height: 280px
+                    overflow: hidden
+                    +lgMaxBreakPoint
+                        height: 217px
+                    div.picture
+                        +bg-image(280px, 295px, './../assets/category.jpg', cover)
                         +lgMaxBreakPoint
                             height: 217px
-                        div.picture
-                            +bg-image(280px, 295px, './../assets/category.svg', cover)
-                            +lgMaxBreakPoint
-                                height: 217px
-                    .name
-                        height: 118px
-                        font-size: 30px
-                        line-height: 118px
-                        color: $light-white
-                        +lgMaxBreakPoint
-                            height: 90px
-                            font-size: 24px
-                            line-height: 90px
+                .name
+                    height: 118px
+                    font-size: 30px
+                    line-height: 118px
+                    color: $light-white
+                    +lgMaxBreakPoint
+                        height: 90px
+                        font-size: 24px
+                        line-height: 90px
         .arrow
             +center
             +bg-image(35px, 35px, './../assets/Arrows-black.svg')
