--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -2,14 +2,17 @@
     font-family: "Avenir"
     src: url("../fonts/avenir/font.woff") format('woff'), url("../fonts/avenir/font.woff2")
     font-weight: 300
+    font-display: swap
 @font-face
     font-family: "Avenir"
     src: url("../fonts/avenir/font-1.woff") format('woff'), url("../fonts/avenir/font-1.woff2")
     font-weight: 500
+    font-display: swap
 @font-face
     font-family: "Avenir"
     src: url("../fonts/avenir/font-2.woff") format('woff'), url("../fonts/avenir/font-2.woff2")
     font-weight: 900
+    font-display: swap
 @import 'mixins'
 @import 'variables'
 @import 'functions'
