Change icons loading.

--- a/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
@@ -49,7 +49,7 @@
                 left: auto
                 right: 28px
             &.disabled
-                opacity: .4
+                display: .4
                 cursor: auto
     .slider-container
         position: relative
