--- a/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
@@ -44,7 +44,7 @@
                 left: auto
                 right: 28px
             &.disabled
-                background-image: url('./../assets/Arrows-light.svg')
+                opacity: .4
                 cursor: auto
         .control-dots
             display: none
