--- a/landing-page/src/components/signUp/_signUp.sass
+++ b/landing-page/src/components/signUp/_signUp.sass
@@ -41,9 +41,10 @@ div.signUp
                 cursor: pointer
     div.close
         +bg-image(32px, 32px, './../assets/close.svg')
+        opacity: .4
         position: absolute
         top: 20px
         right: 20px
         cursor: pointer
         &:hover
-            background-image: url('./../assets/close-hover.svg')
+            opacity: 1
