--- a/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
@@ -23,7 +23,7 @@
                     height: 280px
                     overflow: hidden
                     .picture
-                        +bg-image(280px, 295px, './../assets/category.jpg', cover)
+                        +bg-image(280px, 295px, './../assets/category.webp', cover)
                 .name
                     height: 118px
                     font-size: 30px
