--- a/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
@@ -16,7 +16,7 @@
                     +lgMaxBreakPoint
                         height: 217px
                     div.picture
-                        +bg-image(280px, 295px, './../assets/category.jpg', cover)
+                        +bg-image(280px, 295px, './../assets/category.webp', cover)
                         +lgMaxBreakPoint
                             height: 217px
                 .name
