--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -6,7 +6,7 @@
     +xlMaxBreakPoint
         width: 100%
     div.picture
-        +bg-image(473px, 100%, './../assets/Sideboard_picture.svg', cover)
+        +bg-image(473px, 100%, './../assets/Sideboard_picture.webp', cover)
         +xlMaxBreakPoint
             background-size: contain
             +lgMaxBreakPoint
