--- a/landing-page/src/components/testimonials/_testimonials.sass
+++ b/landing-page/src/components/testimonials/_testimonials.sass
@@ -54,7 +54,7 @@
                         height: 200px
                         overflow: hidden
                         div.picture
-                            +bg-image(200px, 300px, './../assets/review.svg', cover)
+                            +bg-image(200px, 300px, './../assets/review.webp', cover)
                             +smMaxBreakPoint
                                 width: 228px
                     div.textContainer
