--- a/landing-page/src/components/productCategories/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -17,13 +17,12 @@
             transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
             .category
                 +container(295px, 0, $blue, 5px)
-                &:hover
-                    cursor: pointer
+                cursor: pointer
                 .picture-container
                     height: 280px
                     overflow: hidden
                     .picture
-                        +bg-image(280px, 295px, './../assets/category.jpg', cover)
+                        +bg-image(280px, 295px, './../assets/category.webp', cover)
                 .name
                     height: 118px
                     font-size: 30px
