--- a/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselDesktop copy/_categoriesCarouselDesktop.sass
@@ -23,7 +23,7 @@
                     height: 280px
                     overflow: hidden
                     .picture
-                        +bg-image(280px, 295px, './../assets/category.webp', cover)
+                        +bg-image(280px, 295px, '../../assets/category.webp', cover)
                 .name
                     height: 118px
                     font-size: 30px
@@ -37,7 +37,7 @@
                     user-select: none
         .arrow
             +center
-            +bg-image(35px, 35px, './../assets/Arrows-black.svg')
+            +bg-image(35px, 35px, '../../assets/Arrows-black.svg')
             z-index: 2
             transform: translateX(0)
             &:hover
