--- a/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
+++ b/landing-page/src/components/productCategories/categoriesCarouselMobile/_categoriesCarouselMobile.sass
@@ -16,7 +16,7 @@
                     +lgMaxBreakPoint
                         height: 217px
                     div.picture
-                        +bg-image(280px, 295px, './../assets/category.webp', cover)
+                        +bg-image(280px, 295px, '../../assets/category.webp', cover)
                         +lgMaxBreakPoint
                             height: 217px
                 .name
@@ -30,7 +30,7 @@
                         line-height: 90px
         .arrow
             +center
-            +bg-image(35px, 35px, './../assets/Arrows-black.svg')
+            +bg-image(35px, 35px, '../../assets/Arrows-black.svg')
             z-index: 2
             transform: translateX(0)
             +lgMaxBreakPoint
