--- a/landing-page/src/components/productCategories/productCategories.sass
+++ b/landing-page/src/components/productCategories/productCategories.sass
@@ -1,3 +1,4 @@
+@import '../../styles/_mixins.sass'
 @import 'categoriesCarouselDesktop/_categoriesCarouselDesktop'
 @import 'categoriesCarouselMobile/_categoriesCarouselMobile'
 
