--- a/landing-page/src/components/productSection/controlPanel/_controlPanel.sass
+++ b/landing-page/src/components/productSection/controlPanel/_controlPanel.sass
@@ -52,7 +52,7 @@ div.controlPanel
         gap: 10px
         line-height: 20.49px
         div.icon
-            +bg-image(42px, 42px, './../assets/Measure.svg')
+            +bg-image(42px, 42px, '../../assets/Measure.svg')
         p
             width: 287px
             font-size: 13px
