--- a/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
+++ b/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
@@ -8,7 +8,7 @@
             height: 53px
             cursor: pointer
             &-plus
-                +bg-image(10px,10px, './../assets/plus-dark.svg')
+                +bg-image(10px,10px, '../../assets/plus-dark.svg')
                 opacity: .4
                 margin-right: 9px
                 transition: .1s
