--- a/landing-page/src/components/productSection/gallery/_gallery.sass
+++ b/landing-page/src/components/productSection/gallery/_gallery.sass
@@ -6,7 +6,7 @@
     +xlMaxBreakPoint
         width: 100%
     div.picture
-        +bg-image(473px, 100%, './../assets/Sideboard_picture.webp', cover)
+        +bg-image(473px, 100%, '../../assets/Sideboard_picture.webp', cover)
         +xlMaxBreakPoint
             background-size: contain
             +lgMaxBreakPoint
@@ -21,7 +21,7 @@
     .carousel
         div.arrow
             +center
-            +bg-image(32px, 32px, './../assets/Arrows-black.svg')
+            +bg-image(32px, 32px, '../../assets/Arrows-black.svg')
             opacity: .1
             transform: translateX(0)
             z-index: 1
