--- a/landing-page/src/components/topMenu/topMenu.sass
+++ b/landing-page/src/components/topMenu/topMenu.sass
@@ -1,3 +1,4 @@
+@import '../../styles/_mixins.sass'
 @import './underBar/_underBar'
 
 div.topMenu
@@ -29,7 +30,7 @@ div.topMenu
                 margin: 0 14px
                 width: 34px
                 height: 34px
-                background-image: url('./../assets/logo.svg')
+                background-image: url('../../assets/logo.svg')
                 background-repeat: no-repeat
                 background-size: contain
                 +smMaxBreakPoint
