--- a/landing-page/src/components/topMenu/underBar/_underBar.sass
+++ b/landing-page/src/components/topMenu/underBar/_underBar.sass
@@ -12,7 +12,7 @@ div.underBar
         height: 29px
     div.status
         margin: 10px
-        +bg-image(19px, 19px, './../assets/status_icon.svg')
+        +bg-image(19px, 19px, '../../assets/status_icon.svg')
     p
         font-size: 14px
         +smMaxBreakPoint
