--- a/landing-page/src/styles/index.sass
+++ b/landing-page/src/styles/index.sass
@@ -1,22 +1,21 @@
 @font-face
     font-family: "Avenir"
-    src: url("../fonts/avenir/font.woff") format('woff'), url("../fonts/avenir/font.woff2")
+    src: url("../../public/fonts/font.woff") format('woff'), url("../../public/fonts/font.woff2")
     font-weight: 300
     font-display: swap
 @font-face
     font-family: "Avenir"
-    src: url("../fonts/avenir/font-1.woff") format('woff'), url("../fonts/avenir/font-1.woff2")
+    src: url("../../public/fonts/font-1.woff") format('woff'), url("../../public/fonts/font-1.woff2")
     font-weight: 500
     font-display: swap
 @font-face
     font-family: "Avenir"
-    src: url("../fonts/avenir/font-2.woff") format('woff'), url("../fonts/avenir/font-2.woff2")
+    src: url("../../public/fonts/font-2.woff") format('woff'), url("../../public/fonts/font-2.woff2")
     font-weight: 900
     font-display: swap
 @import 'mixins'
 @import 'variables'
 @import 'functions'
-@import './../components/App/_app'
 
 body
     margin: 0
@@ -25,7 +24,6 @@ body
     text-align: center
     font-family: 'Avenir', sans-serif
     font-weight: 500
-    line-box-contain: glyph
     p, h1
         margin: 0
     button
