--- a/landing-page/src/components/testimonials/testimonials.sass
+++ b/landing-page/src/components/testimonials/testimonials.sass
@@ -1,3 +1,5 @@
+@import '../../styles/_mixins.sass'
+
 .testimonials
     height: auto
     background-color: $light-blue
@@ -54,7 +56,7 @@
                         height: 200px
                         overflow: hidden
                         div.picture
-                            +bg-image(200px, 300px, './../assets/review.webp', cover)
+                            +bg-image(200px, 300px, '../../assets/review.webp', cover)
                             +smMaxBreakPoint
                                 width: 228px
                     div.textContainer
@@ -67,7 +69,7 @@
                             text-decoration: underline
             .carousel-arrow
                 +center
-                +bg-image(35px, 35px, './../assets/Arrows-white.svg')
+                +bg-image(35px, 35px, '../../assets/Arrows-white.svg')
                 transform: translate(0, -50%)
                 z-index: 2
                 border: none
@@ -75,7 +77,7 @@
                 +lgMaxBreakPoint
                     display: none
                 &:hover
-                    background-image: url('./../assets/Arrows-black.svg')
+                    background-image: url('../../assets/Arrows-black.svg')
                     cursor: pointer
                 &.carousel-prev
                     left: 90px
