--- a/landing-page/src/components/header/header.sass
+++ b/landing-page/src/components/header/header.sass
@@ -31,6 +31,7 @@ div.header
                 line-height: 49.18px
                 +smMaxBreakPoint
                     width: auto
+                    left: 25px
     .down
         position: absolute
         left: 50%
