--- a/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
+++ b/landing-page/src/components/productSection/controlPanel/accordion/_accordion.sass
@@ -2,9 +2,10 @@
     .tab
         border-top: 1px solid $dark-white
         overflow: hidden
+        margin: 0 25px
         &-label
             +flex(row, flex-start)
-            margin-left: 28px
+            margin-left: 3px
             height: 53px
             cursor: pointer
             &-plus
