--- a/landing-page/src/components/serviceBar/serviceBar.sass
+++ b/landing-page/src/components/serviceBar/serviceBar.sass
@@ -8,6 +8,8 @@
     +lgMaxBreakPoint
         height: 200px
         +flex(column, space-around, flex-start)
+        background-color: $light-white
+        border-color: $light-grey
     .serviceBarItem
         +flex
         +lgMaxBreakPoint
