--- a/landing-page/src/components/testimonials/testimonials.sass
+++ b/landing-page/src/components/testimonials/testimonials.sass
@@ -19,15 +19,14 @@
             padding-top: 4px
             margin-top: 60px
             +lgMaxBreakPoint
-                margin-top: 30px
-                font-size: 30px
-                line-height: 41px
+                font-size: 24px
+                line-height: 32.78px
         p.description
             width: 620px
             color: $blue
             font-size: 24px
             line-height: 32.78px
-            padding: 0 26px
+            padding: 0 25px
             +lgMaxBreakPoint
                 font-size: 20px
                 width: auto
@@ -35,21 +34,20 @@
             width: 300px
             margin: 0
             +smMaxBreakPoint
-                margin: 0 26px
+                margin: 0 25px
                 width: auto
         .reviews-container
             position: relative
             height: 340px
             width: 100%
             overflow: hidden
-            margin-bottom: 60px
-            +lgMaxBreakPoint
-                margin-top: 30px
+            margin: 30px 0 60px
             .review-container
                 padding: 0 10px
                 div.review
                     +container(293px, 0, $dark-white, 5px)
                     overflow: hidden
+                    cursor: pointer
                     +smMaxBreakPoint
                         width: 228px
                     div.pictureContainer
@@ -65,6 +63,12 @@
                         height: 108px
                         line-height: 22px
                         text-align: left
+                        -webkit-touch-callout: none
+                        -webkit-user-select: none
+                        -khtml-user-select: none
+                        -moz-user-select: none
+                        -ms-user-select: none
+                        user-select: none
                         p.name
                             text-decoration: underline
             .carousel-arrow
